# Otus_3

./: CMakeLists.txt  _i_p_print_8h_source.html  _my_type_traits_8h_source.html  annotated.html  classes.html  files.html  functions.html  functions_func.html  structip__printer-members.html  structip__printer.html  structis__list-members.html  structis__list.html  structis__list_3_01std_1_1list_3_01_t_01_4_01_4-members.html  structis__list_3_01std_1_1list_3_01_t_01_4_01_4.html  structis__string-members.html  structis__string.html  structis__string_3_01std_1_1string_01_4-members.html  structis__string_3_01std_1_1string_01_4.html  structis__tuple-members.html  structis__tuple.html  structis__tuple_3_01std_1_1tuple_3_01_args_8_8_8_01_4_01_4-members.html  structis__tuple_3_01std_1_1tuple_3_01_args_8_8_8_01_4_01_4.html  structis__vector-members.html  structis__vector.html  structis__vector_3_01std_1_1vector_3_01_t_01_4_01_4-members.html  structis__vector_3_01std_1_1vector_3_01_t_01_4_01_4.html  version_8h_source.html
.github/workflows/: cmake.yml
docs/: index.md
include/: IPPrint.h  MyTypeTraits.h
search/: classes_0.js  functions_0.js  searchdata.js
src/: main.cpp
tests/: IPPrintTest.cpp
